# SmartIdReader

./: CMakeLists.txt  Main.qml  PhotoFrame.qml  README.md  backend.cpp  backend.h  cameraworker.cpp  cameraworker.h  deploy.iss  imageprovider.cpp  imageprovider.h  logo.rc  main.cpp  server.py
